@@ -7,3 +7,6 @@ In Login, you can enter a username and password to enter as either an admin or s
 As a student, you can pick from the various modules. Some of them are required for certain student accounts. You can also pick your preferences for the timeslots of the modules and it would be recorded in a priorityQueue for that specific timeslot.
 
 As an admin, you can change the requirements of students, view the preference and priority queue and dequeue students from the priority queue of each module.
+
+Due to some weird stuff, you will need to add the following in your run configurations under VM options to run the code.
+--module-path (location of javasdk lib) --add-modules=javafx.controls,javafx.fxml
